src/objects/Apttus_Config2__ProductTranslation__c.object
<CustomObject>
    <description>This object holds the translated values of product object fields for all the languages</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>Translated description of the product</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Translated description of the product</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Family__c</fullName>
        <description>Translated product familty</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Translated product familty</inlineHelpText>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Language__c</fullName>
        <description>Language of the translated product record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Language of the translated product record</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Name__c</fullName>
        <description>holds translated product name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>hold translated product name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCode__c</fullName>
        <description>Translated product code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>translated product code</inlineHelpText>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product record</description>
        <inlineHelpText>Lookup to the product record</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Translation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Translation</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>